--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -24,6 +24,8 @@ jobs:
       - name: Install the latest version of uv
         uses: astral-sh/setup-uv@v3
         with:
+          enable-cache: true
+          cache-dependency-glob: 'pyproject.toml'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Install tox
         run: uv tool install --python-preference only-managed --python 3.13 tox --with tox-uv --with tox-gh
