--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -34,15 +34,12 @@ jobs:
         uses: python-semantic-release/python-semantic-release@v9.10.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          force: patch
           git_committer_name: 'github-actions'
           git_committer_email: 'actions@users.noreply.github.com'
 
-      - name: Build Source and Wheel Distributions
-        run: |
-          python setup.py sdist bdist_wheel
-
       - name: Publish | Upload package to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+        uses: pypa/gh-action-pypi-publish@release/v1.10.3
         if: steps.release.outputs.released == 'true'
 
       - name: Publish | Upload to GitHub Release Assets
