fix: another workflow change in order to have python enviroment and tools properly installed

--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -28,9 +28,11 @@ jobs:
         run: |
           git checkout -B ${{ github.ref_name }} ${{ github.sha }}
 
-      - name: Install pypa/build
-        run: |
-          python3 -m pip install build --user
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+        run: python3 -m pip install build
 
       - name: Action | Semantic Version Release
         id: release
@@ -40,7 +42,6 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           git_committer_name: 'github-actions'
           git_committer_email: 'actions@users.noreply.github.com'
-          build_command: python3 -m build
 
       - name: Publish | Upload package to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
