--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-        run: python3 -m pip install build
+      - run: python3 -m pip install build
 
       - name: Action | Semantic Version Release
         id: release
